Toevoegen van footer class

--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
             border: 10px double black;
         }
 
-        p{
+	#footer{
+            background-color: darkgray;
+            height: 75px;
+            width: 50%;
+            margin-left:25%;
+            margin-right: 25%;
+            text-align: center;
+            position: relative;
+            border: 10px double black;
+	}
+
+        li{
             margin-left: 20px;
             margin-right: 20px;
             margin-top: 2%;
