Toevegen van lijst, lijst items, footer en paragraaf stijl

--- a/index.html
+++ b/index.html
@@ -36,13 +36,27 @@
             text-align: center;
             display: inline-block;
         }
+
+	p{
+	font-size: 25px;
+	color: #333;
+	text-align: center;
+	margin-left: 10px;
+	margin-right: 10px;
+	}
     </style>
 </head>
 <body>
     <div id="header">
-        <p>Home</p>
-        <p>Bestel</p>
-        <p>Contact</p>
+	<ul>
+        <li>Home</li>
+        <li>Bestel</li>
+        <li>Contact</li>
+	</ul>
     </div>
+	
+	<div id="footer">
+		<p>Copyright © Made by Swaelen Jelle</p>
+	</div>
 </body>
 </html>
