Toevoeging van een middenstuk met inhoud

--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
             position: relative;
             border: 10px double black;
 	}
+	
+	#inhoud{
+		background-color: darkgray;
+		height: 100px;
+		width: 70%;
+		margin-left: 15%;
+		margin-right: 15%;
+		text-align: center;
+		position: relative;
+		border: 10px double black;
+	}
 
         li{
             margin-left: 20px;
@@ -54,6 +65,10 @@
         <li>Contact</li>
 	</ul>
     </div>
+	
+	<div id="inhoud">
+		<p>Deze website gaat je helpen met het bestellen van pizza.</p>
+	</div>
 	
 	<div id="footer">
 		<p>Copyright © Made by Swaelen Jelle</p>
