--- a/index.html
+++ b/index.html
@@ -3,24 +3,30 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
-    <style>
-        #header{
-            background-color: darkgray;
-            height: 75px;
-            width: 50%;
-            margin-left:25%;
-            margin-right: 25%;
-            text-align: center;
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Lobster|Space+Mono" rel="stylesheet">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+    }
+
+    #header{
+        background-color: rgba(100, 100, 100, 0.2);
+        height: 75px;
+        width: 100%;
+        text-align: center;
+        font-family: Lobster;
         }
 
 	#footer{
-            background-color: darkgray;
-            height: 75px;
-            width: 50%;
-            margin-left:25%;
-            margin-right: 25%;
-            text-align: center;
-            position: relative;
+        background-color: darkgray;
+        width: 100%;
+        max-height: 200px;
+        height: 100px;
+        position: relative;
+        vertical-align: text-bottom;
+        font-family: Space Mono;
 	}
 	
 	#inhoud{
@@ -31,39 +37,49 @@
 		margin-right: 15%;
 		text-align: center;
 		position: relative;
+        font-family: Fira Sans;
 	}
 
-        li{
-            margin-left: 20px;
-            margin-right: 20px;
-            margin-top: 2%;
-            font-family: Lobster;
-            font-size: 25px;
-            color: #333;
-            text-align: center;
-            display: inline-block;
-        }
+    ul{
+        margin: 0;
+        position: relative;
+        text-align: middle;
+    }
+
+    li{
+        display: inline-block;
+        margin-top: 1em;
+    }
 
 	p{
-	font-size: 25px;
-	color: #333;
-	text-align: center;
-	margin-left: 10px;
-	margin-right: 10px;
+    	font-size: 25px;
+    	color: #333;
+    	text-align: center;
+    	margin-left: 10px;
+    	margin-right: 10px;
 	}
-    </style>
+
+    a{
+        text-decoration: none;
+        color: #333;
+        font-size: 2em;
+        position: relative;
+        text-align: middle;
+    }
+
+</style>
 </head>
 <body>
     <div id="header">
 	<ul>
-        <li>Home</li>
-        <li>Bestel</li>
-        <li>Contact</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Bestel</a></li>
+        <li><a href="index.html">Contact</a></li>
 	</ul>
     </div>
 	
 	<div id="inhoud">
-		<p>Deze website gaat je helpen met het bestellen van pizza.</p>
+		<p>Deze website gaat je helpen met het bestellen van pizza!</p>
 	</div>
 	
 	<div id="footer">
