--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         font-family: Lobster;
         }
 
-	#footer{
+	.footer{
         background-color: darkgray;
         width: 100%;
         max-height: 200px;
@@ -31,10 +31,7 @@
 	
 	#inhoud{
 		background-color: darkgray;
-		height: 100px;
-		width: 70%;
-		margin-left: 15%;
-		margin-right: 15%;
+        margin-top: 25px;
 		text-align: center;
 		position: relative;
         font-family: Fira Sans;
@@ -78,11 +75,13 @@
 	</ul>
     </div>
 	
-	<div id="inhoud">
-		<p>Deze website gaat je helpen met het bestellen van pizza!</p>
+	<div id="inhoud" class="pure-g">
+		<div class="pure-u-1-3"><p>Deze website gaat je helpen met het bestellen van pizza!</p></div>
+        <div class="pure-u-1-3"><p>"Lekkere en degelijke pizza's" ~Klant</p></div>
+        <div class="pure-u-1-3"><p>"Top levering en klant vriendelijkheid!" ~Klant</p></div>
 	</div>
 	
-	<div id="footer">
+	<div class="footer">
 		<p>Copyright © Made by Swaelen Jelle</p>
 	</div>
 </body>
