--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         margin: 0;
         padding: 0;
     }
-    
+
     .header{
         background-color: rgba(100, 100, 100, 0.2);
         height: 5em;
@@ -37,8 +37,8 @@
         font-family: Fjalla One;
 	}
 
-    p.footer{
-        margin-top: 50%;
+    .footer p{
+        font-size: 50px;
     }
 	
 	#inhoud{
@@ -77,6 +77,38 @@
         text-align: middle;
     }
 
+    blockquote:before {
+        display: block;
+        content: "\201C";
+        font-size: 80px;
+        position: absolute;
+        left: -20px;
+        top: -20px;
+        color: #7a7a7a;
+    }
+
+    blockquote {
+        font-family: Georgia, serif;
+        font-size: 20px;
+        font-style: italic;
+        margin-left: 0em;
+        padding: 0.25em 40px;
+        line-height: 1.45;
+        position: relative;
+        color: #383838;
+    }
+
+    blockquote cite {
+        color: #999999;
+        font-size: 14px;
+        display: block;
+        margin-top: 5px;
+    }
+ 
+    blockquote cite:before {
+        content: "\2014 \2009";
+    }
+
 </style>
 </head>
 <body>
@@ -90,9 +122,9 @@
     </div>
 
 	<div class="pure-g inhoud">
-		<div class="pure-u-1-3"><p>Deze website gaat je helpen met het bestellen van pizza!</p></div>
-        <div class="pure-u-1-3"><p>"Lekkere en degelijke pizza's" ~Klant</p></div>
-        <div class="pure-u-1-3"><p>"Top levering en klant vriendelijkheid!" ~Klant</p></div>
+		<div class="pure-u-1-3"><blockquote>Deze website gaat je helpen met het bestellen van pizza!<cite>Pizza de snelle</cite></blockquote></div>   
+        <div class="pure-u-1-3"><blockquote>"Lekkere en degelijke pizza's"<cite>Klant</cite></blockquote></div>
+        <div class="pure-u-1-3"><blockquote>"Top levering en klant vriendelijkheid!"<cite>Klant</cite></blockquote></div>
 	</div>
 
 	<div class="footer">
