--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         font-family: Fjalla One;
         }
 
-    	.header ul{
-        	padding: 0em;
-    	}
+    .header ul{
+        padding: 0em;
+    }
 
-    	.header a{
+    .header a{
         margin-right: 1em;
         margin-left: 1em;
-    	}
+    }
 
 	.footer{
         background-color: darkgray;
@@ -37,9 +37,9 @@
         font-family: Fjalla One;
 	}
 
-    	.footer p{
+    .footer p{
         font-size: 50px;
-    	}
+    }
 	
 	#inhoud{
 		background-color: darkgray;
@@ -91,6 +91,7 @@
         font-family: Georgia, serif;
         font-size: 20px;
         font-style: italic;
+        margin-left: 0em;
         padding: 0.25em 40px;
         line-height: 1.45;
         position: relative;
@@ -121,7 +122,7 @@
     </div>
 
 	<div class="pure-g inhoud">
-	<div class="pure-u-1-3"><blockquote>Deze website gaat je helpen met het bestellen van pizza!<cite>Pizza de snelle</cite></blockquote></div>   
+		<div class="pure-u-1-3"><blockquote>Deze website gaat je helpen met het bestellen van pizza!<cite>Pizza de snelle</cite></blockquote></div>   
         <div class="pure-u-1-3"><blockquote>"Lekkere en degelijke pizza's"<cite>Klant</cite></blockquote></div>
         <div class="pure-u-1-3"><blockquote>"Top levering en klant vriendelijkheid!"<cite>Klant</cite></blockquote></div>
 	</div>
